# Gameboy-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  out
.github/workflows/: cmake-multi-platform.yml
core/: CMakeLists.txt
core/boot/: CMakeLists.txt  boot.cpp
core/cpu/: CMakeLists.txt  cpu.cpp  cpu_rw.cpp  cpu_utils.cpp  ins.cpp  ins_admodes.cpp  ins_prefix.cpp
core/interconnect/: CMakeLists.txt  gb.cpp
core/memory/: CMakeLists.txt  io.cpp  rom.cpp  vram.cpp
core/ppu/: CMakeLists.txt  ppu.cpp  ppu_rw.cpp
include/: Boot.h  CPU.h  GB.h  GBA.h
include/core/cpu/: cpu.h
include/core/interconnect/: gb.h
include/core/memory/: io.h  rom.h  vram.h
include/core/ppu/: ppu.h
src/: Boot.cpp  CPU.cpp  GB.cpp  GBA.cpp  main.cpp
src/cpu/: cpu.cpp  cpu_rw.cpp  cpu_utils.cpp  ins.cpp  ins_admodes.cpp  ins_prefix.cpp
src/memory/: VRAM.cpp
tests/cpu/: CMakeLists.txt  cpu_test.h  cpu_test_rw.cpp  rw_log.cpp  rw_log.h
tests/cpu/cpu_tests/: CMakeLists.txt  sample.cpp  template_test.cpp  xora.cpp
